Updated page PartDesign InvoluteGear/it

--- a/wiki/it/PartDesign_InvoluteGear.html
+++ b/wiki/it/PartDesign_InvoluteGear.html
@@ -194,9 +194,7 @@
 </p><p><span id="Related"></span>
 </p>
 <h2><span class="mw-headline" id="Correlazioni">Correlazioni</span></h2>
-<div class="mw-translate-fuzzy">
-<ul><li><a href="../it/FCGear_Workbench.html" class="mw-redirect" title="FCGear Workbench/it">Ambiente FCGear</a></li></ul>
-</div>
+<ul><li><a href="../it/Gear_Workbench.html" title="Gear Workbench/it">Ambiente Gear</a></li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -239,13 +237,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122080804
+Cached time: 20260122080827
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.133 seconds
-Real time usage: 0.301 seconds
-Preprocessor visited node count: 1613/1000000
+CPU time usage: 0.117 seconds
+Real time usage: 0.186 seconds
+Preprocessor visited node count: 1612/1000000
 Post&#8208;expand include size: 27206/2097152 bytes
 Template argument size: 7731/2097152 bytes
 Highest expansion depth: 7/100
@@ -255,19 +253,19 @@ Unstrip post&#8208;expand size: 2638/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   51.288      1 -total
- 26.43%   13.553     26 Template:PropertyData
- 24.89%   12.768      1 Template:PartDesign_Tools_navi/it
- 19.33%    9.913     27 Template:Variable
- 16.53%    8.476      2 Template:Navigation_menu_2
- 11.34%    5.814      1 Template:Userdocnavi/it
-  6.86%    3.520      1 Template:GuiCommand/it
-  5.27%    2.703      1 Template:PropertyView
-  5.18%    2.655      2 Template:Docnav/it
-  4.41%    2.262      5 Template:Version/it
+100.00%   47.315      1 -total
+ 29.87%   14.133     26 Template:PropertyData
+ 20.36%    9.633     27 Template:Variable
+ 16.45%    7.784      1 Template:PartDesign_Tools_navi/it
+ 10.53%    4.980      1 Template:Userdocnavi/it
+  9.57%    4.526      2 Template:Navigation_menu_2
+  8.11%    3.835      1 Template:GuiCommand/it
+  6.25%    2.955      5 Template:Version/it
+  5.48%    2.592      2 Template:Docnav/it
+  4.76%    2.252      1 Template:PropertyView
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:30465-0!canonical and timestamp 20260122080803 and revision id 1742188. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:30465-0!canonical and timestamp 20260122080827 and revision id 1742190. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
