--- a/wiki/it/Macro_Line_Length.html
+++ b/wiki/it/Macro_Line_Length.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Line_Length.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Linienl&auml;nge (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Line_Length.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Line Length (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Line_Length.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Line Length (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Line_Length.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: D&#322;ugo&#347;&#263; Linii (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../cs/Macro_Line_Length.html" class="mw-pt-progress mw-pt-progress--med" title="Makro P&#345;&iacute;mka podle d&eacute;lky (50% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -76,16 +76,12 @@ Linea e opzioni
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>Questa macro permette di creare una linea usando come argomento le coordinate XYZ, la lunghezza e l'angolo.
+</p><p><span id="Usage"></span>
 </p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Utilizzo_2">Utilizzo</span></h2>
 <p>Pu&ograve; essere usata nell'editor delle macro di FreeCAD.
 </p>
 </div>
@@ -136,30 +132,30 @@ def line_length(x1 = 0.0, y1 = 0.0, z1 = 0.0, length = 10.0, angle = 0.0):
 </pre></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122080906
+Cached time: 20260122080919
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.042 seconds
-Real time usage: 0.073 seconds
-Preprocessor visited node count: 136/1000000
+CPU time usage: 0.033 seconds
+Real time usage: 0.050 seconds
+Preprocessor visited node count: 132/1000000
 Post&#8208;expand include size: 2706/2097152 bytes
 Template argument size: 1694/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3886/5000000 bytes
+Unstrip post&#8208;expand size: 3887/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.341      1 -total
- 55.85%    9.126      1 Template:Macro/it
- 23.91%    3.908      1 Template:MacroCode
- 23.65%    3.864      1 Template:ColoredText
- 17.70%    2.892      2 Template:Code
+100.00%    9.301      1 -total
+ 46.97%    4.369      1 Template:Macro/it
+ 25.37%    2.360      1 Template:MacroCode
+ 23.81%    2.215      2 Template:Code
+ 17.76%    1.652      1 Template:ColoredText
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25081-0!canonical and timestamp 20260122080906 and revision id 1742192. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25081-0!canonical and timestamp 20260122080919 and revision id 1742196. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
