--- a/wiki/it/Macro_Line_Length.html
+++ b/wiki/it/Macro_Line_Length.html
@@ -80,12 +80,8 @@ Linea e opzioni
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Utilizzo_2">Utilizzo</span></h2>
-<p>Pu&ograve; essere usata nell'editor delle macro di FreeCAD.
-</p>
-</div>
-<p>i valori di default sono&nbsp;: x1=0, y1=0, z1=0, length=10, angle=0
+<p>Pu&ograve; essere usata dall'editor delle macro di FreeCAD.
+</p><p>i valori di default sono&nbsp;: x1=0, y1=0, z1=0, length=10, angle=0
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -132,13 +128,13 @@ def line_length(x1 = 0.0, y1 = 0.0, z1 = 0.0, length = 10.0, angle = 0.0):
 </pre></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122080919
+Cached time: 20260122080933
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.033 seconds
-Real time usage: 0.050 seconds
-Preprocessor visited node count: 132/1000000
+CPU time usage: 0.039 seconds
+Real time usage: 0.069 seconds
+Preprocessor visited node count: 128/1000000
 Post&#8208;expand include size: 2706/2097152 bytes
 Template argument size: 1694/2097152 bytes
 Highest expansion depth: 7/100
@@ -148,14 +144,14 @@ Unstrip post&#8208;expand size: 3887/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.301      1 -total
- 46.97%    4.369      1 Template:Macro/it
- 25.37%    2.360      1 Template:MacroCode
- 23.81%    2.215      2 Template:Code
- 17.76%    1.652      1 Template:ColoredText
+100.00%   15.574      1 -total
+ 45.89%    7.147      1 Template:Macro/it
+ 29.52%    4.598      1 Template:MacroCode
+ 21.60%    3.364      1 Template:ColoredText
+ 21.35%    3.325      2 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25081-0!canonical and timestamp 20260122080919 and revision id 1742196. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25081-0!canonical and timestamp 20260122080933 and revision id 1742198. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
