--- a/wiki/it/Macro_Line_Length.html
+++ b/wiki/it/Macro_Line_Length.html
@@ -118,23 +118,21 @@ def line_length(x1 = 0.0, y1 = 0.0, z1 = 0.0, length = 10.0, angle = 0.0):
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="o">&gt;&gt;&gt;</span> <span class="n">line_length</span><span class="p">(</span><span class="n">x1</span> <span class="o">=</span> <span class="mi">0</span><span class="p">,</span> <span class="n">y1</span> <span class="o">=</span> <span class="mi">0</span><span class="p">,</span> <span class="n">z1</span> <span class="o">=</span> <span class="mi">0</span><span class="p">,</span> <span class="n">length</span> <span class="o">=</span> <span class="mi">10</span><span class="p">,</span> <span class="n">angle</span> <span class="o">=</span> <span class="mi">45</span><span class="p">)</span>
 </pre></div>
-<div class="mw-translate-fuzzy">
-<p>oppure, a scelta:
+<p>oppure scegliere:
 </p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="o">&gt;&gt;&gt;</span> <span class="n">line_length</span><span class="p">(</span><span class="n">x1</span> <span class="o">=</span> <span class="mi">10</span><span class="p">,</span> <span class="n">y1</span> <span class="o">=</span> <span class="mi">10</span><span class="p">,</span> <span class="n">z1</span> <span class="o">=</span> <span class="mi">0</span><span class="p">,</span> <span class="n">length</span> <span class="o">=</span> <span class="mi">50</span><span class="p">)</span>
 
 <span class="o">&gt;&gt;&gt;</span> <span class="n">line_length</span><span class="p">(</span><span class="n">length</span> <span class="o">=</span> <span class="mi">50</span><span class="p">,</span> <span class="n">angle</span> <span class="o">=</span> <span class="mi">45</span><span class="p">)</span>
 </pre></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122080933
+Cached time: 20260122081011
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.039 seconds
-Real time usage: 0.069 seconds
-Preprocessor visited node count: 128/1000000
+CPU time usage: 0.035 seconds
+Real time usage: 0.061 seconds
+Preprocessor visited node count: 127/1000000
 Post&#8208;expand include size: 2706/2097152 bytes
 Template argument size: 1694/2097152 bytes
 Highest expansion depth: 7/100
@@ -144,14 +142,14 @@ Unstrip post&#8208;expand size: 3887/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.574      1 -total
- 45.89%    7.147      1 Template:Macro/it
- 29.52%    4.598      1 Template:MacroCode
- 21.60%    3.364      1 Template:ColoredText
- 21.35%    3.325      2 Template:Code
+100.00%   13.785      1 -total
+ 62.71%    8.645      1 Template:Macro/it
+ 25.75%    3.549      1 Template:ColoredText
+ 20.80%    2.867      1 Template:MacroCode
+ 14.26%    1.966      2 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25081-0!canonical and timestamp 20260122080933 and revision id 1742198. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25081-0!canonical and timestamp 20260122081011 and revision id 1742200. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
