--- a/wiki/it/Macro_Line_Length.html
+++ b/wiki/it/Macro_Line_Length.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Line_Length.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Linienl&auml;nge (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Line_Length.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Line Length (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Line_Length.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Line Length (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Line_Length.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: D&#322;ugo&#347;&#263; Linii (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../cs/Macro_Line_Length.html" class="mw-pt-progress mw-pt-progress--med" title="Makro P&#345;&iacute;mka podle d&eacute;lky (50% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -84,11 +84,8 @@ Linea e opzioni
 </p><p>i valori di default sono&nbsp;: x1=0, y1=0, z1=0, length=10, angle=0
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Line_Length.png&amp;filetimestamp=20190702155619&amp;.html" class="mw-file-description"><img src="../File/Macro_Line_Length.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p>
-</div>
-<p><b>Macro Line_Length.py</b>
+<p>Icona barra strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Line_Length.png&amp;filetimestamp=20190702155619&amp;.html" class="mw-file-description"><img src="../File/Macro_Line_Length.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
+</p><p><b>Macro Line_Length.py</b>
 </p>
 <pre># -*- coding: utf-8 -*-
 # cr&eacute;er une ligne avec une coordonn&eacute;e une longueur et un angle sur le plan X Y
@@ -126,30 +123,30 @@ def line_length(x1 = 0.0, y1 = 0.0, z1 = 0.0, length = 10.0, angle = 0.0):
 </pre></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122081011
+Cached time: 20260122081039
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.035 seconds
-Real time usage: 0.061 seconds
-Preprocessor visited node count: 127/1000000
+CPU time usage: 0.037 seconds
+Real time usage: 0.065 seconds
+Preprocessor visited node count: 126/1000000
 Post&#8208;expand include size: 2706/2097152 bytes
 Template argument size: 1694/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3887/5000000 bytes
+Unstrip post&#8208;expand size: 3891/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.785      1 -total
- 62.71%    8.645      1 Template:Macro/it
- 25.75%    3.549      1 Template:ColoredText
- 20.80%    2.867      1 Template:MacroCode
- 14.26%    1.966      2 Template:Code
+100.00%   14.717      1 -total
+ 34.53%    5.082      1 Template:Macro/it
+ 34.05%    5.011      1 Template:MacroCode
+ 29.52%    4.345      2 Template:Code
+ 16.90%    2.487      1 Template:ColoredText
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25081-0!canonical and timestamp 20260122081011 and revision id 1742200. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25081-0!canonical and timestamp 20260122081039 and revision id 1742202. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
