--- a/wiki/it/Macro_Line_Length.html
+++ b/wiki/it/Macro_Line_Length.html
@@ -115,7 +115,7 @@ def line_length(x1 = 0.0, y1 = 0.0, z1 = 0.0, length = 10.0, angle = 0.0):
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="o">&gt;&gt;&gt;</span> <span class="n">line_length</span><span class="p">(</span><span class="n">x1</span> <span class="o">=</span> <span class="mi">0</span><span class="p">,</span> <span class="n">y1</span> <span class="o">=</span> <span class="mi">0</span><span class="p">,</span> <span class="n">z1</span> <span class="o">=</span> <span class="mi">0</span><span class="p">,</span> <span class="n">length</span> <span class="o">=</span> <span class="mi">10</span><span class="p">,</span> <span class="n">angle</span> <span class="o">=</span> <span class="mi">45</span><span class="p">)</span>
 </pre></div>
-<p>oppure scegliere:
+<p>oppure a scelta:
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="o">&gt;&gt;&gt;</span> <span class="n">line_length</span><span class="p">(</span><span class="n">x1</span> <span class="o">=</span> <span class="mi">10</span><span class="p">,</span> <span class="n">y1</span> <span class="o">=</span> <span class="mi">10</span><span class="p">,</span> <span class="n">z1</span> <span class="o">=</span> <span class="mi">0</span><span class="p">,</span> <span class="n">length</span> <span class="o">=</span> <span class="mi">50</span><span class="p">)</span>
 
@@ -123,12 +123,12 @@ def line_length(x1 = 0.0, y1 = 0.0, z1 = 0.0, length = 10.0, angle = 0.0):
 </pre></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122081039
+Cached time: 20260122081044
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.037 seconds
-Real time usage: 0.065 seconds
+CPU time usage: 0.040 seconds
+Real time usage: 0.056 seconds
 Preprocessor visited node count: 126/1000000
 Post&#8208;expand include size: 2706/2097152 bytes
 Template argument size: 1694/2097152 bytes
@@ -139,14 +139,14 @@ Unstrip post&#8208;expand size: 3891/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.717      1 -total
- 34.53%    5.082      1 Template:Macro/it
- 34.05%    5.011      1 Template:MacroCode
- 29.52%    4.345      2 Template:Code
- 16.90%    2.487      1 Template:ColoredText
+100.00%   11.079      1 -total
+ 48.32%    5.353      1 Template:Macro/it
+ 27.03%    2.995      2 Template:Code
+ 21.49%    2.381      1 Template:MacroCode
+ 19.08%    2.114      1 Template:ColoredText
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25081-0!canonical and timestamp 20260122081039 and revision id 1742202. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25081-0!canonical and timestamp 20260122081044 and revision id 1742204. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
