--- a/wiki/pl/Scripted_objects.html
+++ b/wiki/pl/Scripted_objects.html
@@ -1,12 +1,12 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Scripted objects/pl</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="pl" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Scripted+objects&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../id/Scripted_objects.html" class="mw-pt-progress mw-pt-progress--low" title="Scripted objects (1% translated)" lang="id" dir="ltr">Bahasa Indonesia</a></li>
-<li><a href="../de/Scripted_objects.html" class="mw-pt-progress mw-pt-progress--high" title="Skriptgenerierte Objekte (99% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Scripted_objects.html" class="mw-pt-progress mw-pt-progress--complete" title="Skriptgenerierte Objekte (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Scripted_objects.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Scripted objects (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../tr/Scripted_objects.html" class="mw-pt-progress mw-pt-progress--low" title="Scripted objects (1% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/Scripted_objects.html" class="mw-pt-progress mw-pt-progress--low" title="Scripted objects (5% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Scripted_objects.html" class="mw-pt-progress mw-pt-progress--high" title="Objets cr&eacute;&eacute;s par script (99% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Scripted_objects.html" class="mw-pt-progress mw-pt-progress--high" title="Oggetti creati da script (99% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li>
 <li><a href="../pt/Scripted_objects.html" class="mw-pt-progress mw-pt-progress--low" title="Scripted objects (1% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/Scripted_objects.html" class="mw-pt-progress mw-pt-progress--low" title="Objetos com Script (3% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Scripted_objects.html" class="mw-pt-progress mw-pt-progress--low" title="Obiecte create prin script-programare (8% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -1000,11 +1000,8 @@
 <p><span id="Available_extensions"></span>
 </p>
 <h2><span id="Dost.C4.99pne_rozszerzenia"></span><span class="mw-headline" id="Dost&#281;pne_rozszerzenia">Dost&#281;pne rozszerzenia</span></h2>
-<div class="mw-translate-fuzzy">
-<p>List&#281; dost&#281;pnych rozszerze&#324; mo&#380;na uzyska&#263; za pomoc&#261; <code>grep -RI EXTENSION_PROPERTY_SOURCE_TEMPLATE</code> w repozytorium kodu &#378;r&oacute;d&#322;owego i jest podana tutaj (dla FreeCAD v0.21).
-</p>
-</div>
-<p>W przypadku obiekt&oacute;w:
+<p>List&#281; dost&#281;pnych rozszerze&#324; mo&#380;na uzyska&#263; za pomoc&#261; <code>grep -RI EXTENSION_PROPERTY_SOURCE_TEMPLATE</code> w repozytorium kodu &#378;r&oacute;d&#322;owego i jest podana tutaj (dla FreeCAD v1.1).
+</p><p>W przypadku obiekt&oacute;w:
 </p>
 <ul><li><code>App::GeoFeatureGroupExtensionPython</code></li>
 <li><code>App::GroupExtensionPython</code></li>
@@ -1079,33 +1076,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121210325
+Cached time: 20260122081046
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.256 seconds
-Real time usage: 0.323 seconds
-Preprocessor visited node count: 1107/1000000
+CPU time usage: 0.234 seconds
+Real time usage: 0.413 seconds
+Preprocessor visited node count: 1106/1000000
 Post&#8208;expand include size: 13994/2097152 bytes
 Template argument size: 33903/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 19/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 137515/5000000 bytes
+Unstrip post&#8208;expand size: 137524/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.647      1 -total
- 21.58%    6.830     19 Template:Code
- 19.01%    6.016      1 Template:Powerdocnavi/pl
- 14.49%    4.586    119 Template:Incode
-  9.07%    2.871      1 Template:Version/pl
-  8.57%    2.713      2 Template:Docnav/pl
-  3.14%    0.994      1 Template:TOCright
-  2.89%    0.916      1 Template:Navigation_menu_2
+100.00%   48.666      1 -total
+ 22.58%   10.988     19 Template:Code
+ 17.31%    8.426      1 Template:Powerdocnavi/pl
+ 13.98%    6.802    119 Template:Incode
+ 11.51%    5.603      2 Template:Docnav/pl
+ 11.06%    5.381      1 Template:Version/pl
+  5.87%    2.855      1 Template:Navigation_menu_2
+  3.04%    1.478      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:33407-0!canonical and timestamp 20260121210325 and revision id 1742074. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:33407-0!canonical and timestamp 20260122081046 and revision id 1742206. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
