--- a/wiki/it/Macro_GMSH.html
+++ b/wiki/it/Macro_GMSH.html
@@ -80,10 +80,8 @@ GMSHMacro
 </p><p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Semplice macro per creareMesh FEM Mesh con il generatore di mesh Gmsh. &Egrave; possibile creare reticoli bidimensionali o tridimensionali
+<p>Semplice macro per creare mesh per FEM tramite il generatore di mesh GMSH. &Egrave; possibile creare elementi lineari o bilineari (quadratici) come travi, gusci e volumi.
 </p>
-</div>
 <div class="toccolours mw-collapsible mw-collapsed" style="cursor:not-allowed">
 <p>Temporary code for external macro link. Do not use this code. This code is used exclusively by <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>. <i>Link for optional manual installation: <a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/psicofil/Macros_FreeCAD/master/Macros/GMSHMesh.FCMacro">Macro</a></i>
 </p>
@@ -118,9 +116,7 @@ webbrowser.open("https://raw.githubusercontent.com/psicofil/Macros_FreeCAD/maste
 <p><br>
 <span typeof="mw:File"><a href="../index.php?title=Macro_GMSH00.png&amp;filetimestamp=20190616114010&amp;.html" class="mw-file-description" title="GMSH"><img alt="GMSH" src="../File/Macro_GMSH00.png" decoding="async" width="480" height="260" class="mw-file-element" data-file-width="1366" data-file-height="739"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-</div>
 <div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Script_2">Script</span></h2>
 <p>La macro si pu&ograve; trovare nel seguente repositorio github: <a rel="nofollow" class="external text" href="https://github.com/psicofil/Macros_FreeCAD/blob/master/Macros/GMSHMesh.FCMacro">GMSH Macro</a>
@@ -150,13 +146,13 @@ webbrowser.open("https://raw.githubusercontent.com/psicofil/Macros_FreeCAD/maste
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20251009170124
+Cached time: 20260122104304
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.067 seconds
-Real time usage: 0.116 seconds
-Preprocessor visited node count: 123/1000000
+CPU time usage: 0.039 seconds
+Real time usage: 0.056 seconds
+Preprocessor visited node count: 121/1000000
 Post&#8208;expand include size: 2722/2097152 bytes
 Template argument size: 989/2097152 bytes
 Highest expansion depth: 5/100
@@ -166,13 +162,13 @@ Unstrip post&#8208;expand size: 2113/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.884      1 -total
- 35.94%    3.193      1 Template:Macro/it
- 35.14%    3.122      1 Template:Codeextralink
- 24.68%    2.193      1 Template:Clear
+100.00%    8.206      1 -total
+ 37.14%    3.048      1 Template:Macro/it
+ 34.80%    2.856      1 Template:Codeextralink
+ 23.17%    1.901      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:60468-0!canonical and timestamp 20251009170124 and revision id 1659087. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:60468-0!canonical and timestamp 20260122104303 and revision id 1742210. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
