--- a/wiki/it/Macro_GMSH.html
+++ b/wiki/it/Macro_GMSH.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_GMSH.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro GMSH (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_GMSH.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro GMSH (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_GMSH.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro GMSH (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_GMSH.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: GMSH (7% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Macro_GMSH.html" class="mw-pt-progress mw-pt-progress--med" title="Macro GMSH/ru (29% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -117,11 +117,8 @@ webbrowser.open("https://raw.githubusercontent.com/psicofil/Macros_FreeCAD/maste
 <span typeof="mw:File"><a href="../index.php?title=Macro_GMSH00.png&amp;filetimestamp=20190616114010&amp;.html" class="mw-file-description" title="GMSH"><img alt="GMSH" src="../File/Macro_GMSH00.png" decoding="async" width="480" height="260" class="mw-file-element" data-file-width="1366" data-file-height="739"></a></span>
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Script_2">Script</span></h2>
 <p>La macro si pu&ograve; trovare nel seguente repositorio github: <a rel="nofollow" class="external text" href="https://github.com/psicofil/Macros_FreeCAD/blob/master/Macros/GMSHMesh.FCMacro">GMSH Macro</a>
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_GMSH.png&amp;filetimestamp=20190616114245&amp;.html" class="mw-file-description"><img src="../File/Macro_GMSH.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </p>
@@ -146,29 +143,29 @@ webbrowser.open("https://raw.githubusercontent.com/psicofil/Macros_FreeCAD/maste
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122104304
+Cached time: 20260122104314
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.039 seconds
-Real time usage: 0.056 seconds
-Preprocessor visited node count: 121/1000000
+CPU time usage: 0.029 seconds
+Real time usage: 0.048 seconds
+Preprocessor visited node count: 117/1000000
 Post&#8208;expand include size: 2722/2097152 bytes
 Template argument size: 989/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2113/5000000 bytes
+Unstrip post&#8208;expand size: 2114/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.206      1 -total
- 37.14%    3.048      1 Template:Macro/it
- 34.80%    2.856      1 Template:Codeextralink
- 23.17%    1.901      1 Template:Clear
+100.00%    8.294      1 -total
+ 47.22%    3.916      1 Template:Macro/it
+ 29.17%    2.419      1 Template:Codeextralink
+ 20.46%    1.697      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:60468-0!canonical and timestamp 20260122104303 and revision id 1742210. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:60468-0!canonical and timestamp 20260122104314 and revision id 1742212. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
