Created page with "Icona barra degli strumenti [[Image:Macro_GMSH.png]]"

--- a/wiki/it/Macro_GMSH.html
+++ b/wiki/it/Macro_GMSH.html
@@ -118,12 +118,8 @@ webbrowser.open("https://raw.githubusercontent.com/psicofil/Macros_FreeCAD/maste
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <p>La macro si pu&ograve; trovare nel seguente repositorio github: <a rel="nofollow" class="external text" href="https://github.com/psicofil/Macros_FreeCAD/blob/master/Macros/GMSHMesh.FCMacro">GMSH Macro</a>
-</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_GMSH.png&amp;filetimestamp=20190616114245&amp;.html" class="mw-file-description"><img src="../File/Macro_GMSH.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p>
-</div>
-<p><b>GMSHMesh.FCMacro GMSH Macro.FCMacro</b>
+</p><p>Icona barra degli strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_GMSH.png&amp;filetimestamp=20190616114245&amp;.html" class="mw-file-description"><img src="../File/Macro_GMSH.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
+</p><p><b>GMSHMesh.FCMacro GMSH Macro.FCMacro</b>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Additional_Installations">Additional Installations</span></h2>
@@ -143,13 +139,13 @@ webbrowser.open("https://raw.githubusercontent.com/psicofil/Macros_FreeCAD/maste
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122104314
+Cached time: 20260122104337
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.029 seconds
-Real time usage: 0.048 seconds
-Preprocessor visited node count: 117/1000000
+CPU time usage: 0.042 seconds
+Real time usage: 0.082 seconds
+Preprocessor visited node count: 116/1000000
 Post&#8208;expand include size: 2722/2097152 bytes
 Template argument size: 989/2097152 bytes
 Highest expansion depth: 5/100
@@ -159,13 +155,13 @@ Unstrip post&#8208;expand size: 2114/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.294      1 -total
- 47.22%    3.916      1 Template:Macro/it
- 29.17%    2.419      1 Template:Codeextralink
- 20.46%    1.697      1 Template:Clear
+100.00%   15.415      1 -total
+ 46.54%    7.175      1 Template:Macro/it
+ 28.76%    4.433      1 Template:Codeextralink
+ 21.31%    3.285      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:60468-0!canonical and timestamp 20260122104314 and revision id 1742212. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:60468-0!canonical and timestamp 20260122104337 and revision id 1742214. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
