--- a/wiki/it/Macro_GMSH.html
+++ b/wiki/it/Macro_GMSH.html
@@ -124,28 +124,24 @@ webbrowser.open("https://raw.githubusercontent.com/psicofil/Macros_FreeCAD/maste
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Additional_Installations">Additional Installations</span></h2>
 </div>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Installazioni_aggiuntive">Installazioni aggiuntive</span></h2>
 <p>GMSH deve essere installato. Vedere <a rel="nofollow" class="external text" href="http://gmsh.info/">gmsh.info</a>. La macro &egrave; idonea per essere eseguita su sistema operativo Linux, OSX e Windows. Il percorso binario di Gmsh deve essere adattato nella macro.
+</p><p><span id="Links"></span>
 </p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Links">Links</span></h2>
-</div>
 <h2><span class="mw-headline" id="Link">Link</span></h2>
+<h2><span class="mw-headline" id="Link_2">Link</span></h2>
 <p>La pagina della discussione nel forum: <a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?t=11182">GMSH macro</a>
 </p><p><a rel="nofollow" class="external text" href="https://www.youtube.com/watch?v=ZcG5EEUe3yc">Vedere su YouTube come utilizzare la macro.</a>
 </p>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122104337
+Cached time: 20260122104412
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.042 seconds
-Real time usage: 0.082 seconds
-Preprocessor visited node count: 116/1000000
+CPU time usage: 0.027 seconds
+Real time usage: 0.038 seconds
+Preprocessor visited node count: 112/1000000
 Post&#8208;expand include size: 2722/2097152 bytes
 Template argument size: 989/2097152 bytes
 Highest expansion depth: 5/100
@@ -155,13 +151,13 @@ Unstrip post&#8208;expand size: 2114/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.415      1 -total
- 46.54%    7.175      1 Template:Macro/it
- 28.76%    4.433      1 Template:Codeextralink
- 21.31%    3.285      1 Template:Clear
+100.00%    4.299      1 -total
+ 46.38%    1.994      1 Template:Macro/it
+ 27.10%    1.165      1 Template:Codeextralink
+ 22.84%    0.982      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:60468-0!canonical and timestamp 20260122104337 and revision id 1742214. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:60468-0!canonical and timestamp 20260122104412 and revision id 1742218. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
