Updated page Macro Repro Wire/it

--- a/wiki/it/Macro_Repro_Wire.html
+++ b/wiki/it/Macro_Repro_Wire.html
@@ -83,12 +83,8 @@ Replica un componente
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Uso">Uso</span></h2>
-<p>Selezionare l'oggetto e poi eseguire la macro per creare la sua copia. &Egrave; possibile usare la copia per produrre delle estrusioni o altre ordinarie operazioni.
-</p>
-</div>
-<p>Le copie sono di colore rosso e denominate "Shapexxx + il nome dell'originale".
+<p>Selezionare l'oggetto ed eseguire la macro per crearne la copia; si possono estrudere le facce create.
+</p><p>Le copie sono di colore rosso e denominate "Shapexxx + il nome dell'originale".
 </p><p><span id="Script"></span>
 </p>
 <div class="mw-translate-fuzzy">
@@ -216,13 +212,13 @@ except Exception:
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122104924
+Cached time: 20260122105022
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.042 seconds
-Real time usage: 0.088 seconds
-Preprocessor visited node count: 124/1000000
+CPU time usage: 0.041 seconds
+Real time usage: 0.104 seconds
+Preprocessor visited node count: 120/1000000
 Post&#8208;expand include size: 2722/2097152 bytes
 Template argument size: 5668/2097152 bytes
 Highest expansion depth: 5/100
@@ -232,14 +228,14 @@ Unstrip post&#8208;expand size: 6504/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.768      1 -total
- 33.45%    5.275      1 Template:Macro/it
- 27.70%    4.368      1 Template:Caption
- 27.39%    4.319      1 Template:MacroCode
-  9.01%    1.421      1 Template:Clear
+100.00%   15.974      1 -total
+ 42.06%    6.719      1 Template:MacroCode
+ 22.42%    3.582      1 Template:Caption
+ 22.25%    3.554      1 Template:Macro/it
+ 10.52%    1.680      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:62346-0!canonical and timestamp 20260122104924 and revision id 1742242. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:62346-0!canonical and timestamp 20260122105022 and revision id 1742244. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
