Created page with "====File===="

--- a/wiki/it/Macro_Texture.html
+++ b/wiki/it/Macro_Texture.html
@@ -210,9 +210,7 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/262317bc7d8555885b0
 <ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonTrue.svg&amp;filetimestamp=20200323161550&amp;.html" class="mw-file-description"><img src="../File/RadioButtonTrue.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Photo<span></span></span>&nbsp;: Il modo Photo &egrave; attivato automaticamente quando viene rilevata una immagine di <b>32 bit</b>. (La procedura pu&ograve; essere lunga)</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Plan<span></span></span>&nbsp;: Il modo Plan consente di importare una immagine di <b>32 bit</b> e ignorare lo sfondo del piano. Il colore predefinito dello sfondo del piano &egrave; il nero,  per ignorare pi&ugrave; colori regolare il <b>Capping</b>. Se &egrave; selezionato il bianco, ignora il bianco e lascia passare tutti gli altri colori. (La procedura pu&ograve; essere lunga)</li></ul>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <h4><span class="mw-headline" id="File">File</span></h4>
-</div>
 <div class="mw-translate-fuzzy">
 <h4><span class="mw-headline" id="Files">Files</span></h4>
 <ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> .pcd<span></span></span>&nbsp;: Se &egrave; selezionato viene salvato un file originalName.bmp.pcd nella stessa directory del file (pcd v0.7).</li>
@@ -419,13 +417,13 @@ che causa un errore con la seguente versione di FreeCAD&nbsp;: 0.14.3343 (Git), 
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260122105658
+Cached time: 20260122105714
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.198 seconds
-Real time usage: 0.325 seconds
-Preprocessor visited node count: 738/1000000
+CPU time usage: 0.194 seconds
+Real time usage: 0.286 seconds
+Preprocessor visited node count: 737/1000000
 Post&#8208;expand include size: 16381/2097152 bytes
 Template argument size: 2833/2097152 bytes
 Highest expansion depth: 6/100
@@ -435,19 +433,19 @@ Unstrip post&#8208;expand size: 19148/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  118.187      1 -total
-  1.50%    1.776      1 Template:Macro/it
-  1.48%    1.748      9 Template:CheckBox
-  1.42%    1.680      9 Template:SpinBox
-  1.18%    1.399      1 Template:Code
-  1.14%    1.345      6 Template:RadioButton
-  0.85%    1.007      1 Template:Codeextralink
-  0.85%    1.006      1 Template:FALSE
-  0.84%    0.988      3 Template:Button
-  0.76%    0.898      1 Template:TRUE
+100.00%  123.505      1 -total
+  4.45%    5.492      1 Template:Code
+  2.99%    3.689      6 Template:RadioButton
+  2.85%    3.521      1 Template:Macro/it
+  2.52%    3.114      1 Template:Codeextralink
+  2.44%    3.009      9 Template:CheckBox
+  2.26%    2.796      9 Template:SpinBox
+  1.94%    2.394      1 Template:TRUE
+  1.91%    2.360      3 Template:Button
+  1.70%    2.096      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122105658 and revision id 1742278. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122105714 and revision id 1742280. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
