Updated page Macro Texture/it

--- a/wiki/it/Macro_Texture.html
+++ b/wiki/it/Macro_Texture.html
@@ -370,12 +370,8 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/262317bc7d8555885b0
 <h2><span class="mw-headline" id="Link">Link</span></h2>
 <h2><span class="mw-headline" id="Link_2">Link</span></h2>
 <p>La discussione sul <a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?f=24&amp;t=5893">forum</a> per esprimere le proprie impressioni e contattare l'autore.
-</p>
-<div class="mw-translate-fuzzy">
-<p>La <span typeof="mw:File"><a href="../index.php?title=FCCreaLoft.png&amp;filetimestamp=20160207151812&amp;.html" class="mw-file-description" title="FCCreaLoft"><img alt="FCCreaLoft" src="../File/FCCreaLoft.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> <a href="../it/Macro_Loft.html" title="Macro Loft/it">Macro Loft</a> che permette di automatizzare il "multi loft"
-</p>
-</div>
-<p><a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?f=3&amp;t=4708&amp;start=10#p46353">apply hair cell texture</a>
+</p><p>La macro <span typeof="mw:File"><a href="../index.php?title=FCCreaLoft.png&amp;filetimestamp=20160207151812&amp;.html" class="mw-file-description" title="FCCreaLoft"><img alt="FCCreaLoft" src="../File/FCCreaLoft.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> <a href="../it/Macro_Loft.html" title="Macro Loft/it">Macro Loft</a> serve per automatizzare il multi loft.
+</p><p><a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?f=3&amp;t=4708&amp;start=10#p46353">apply hair cell texture</a>
 </p><p><a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?f=3&amp;t=6123&amp;hilit=teobo&amp;start=10#p49024">How to handle pdf import properly and feasibly?</a>
 </p><p><span id="Revision"></span>
 </p>
@@ -413,13 +409,13 @@ che causa un errore con la seguente versione di FreeCAD&nbsp;: 0.14.3343 (Git), 
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260122105815
+Cached time: 20260122105850
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.184 seconds
-Real time usage: 0.244 seconds
-Preprocessor visited node count: 733/1000000
+CPU time usage: 0.177 seconds
+Real time usage: 0.340 seconds
+Preprocessor visited node count: 732/1000000
 Post&#8208;expand include size: 16381/2097152 bytes
 Template argument size: 2833/2097152 bytes
 Highest expansion depth: 6/100
@@ -429,19 +425,19 @@ Unstrip post&#8208;expand size: 19148/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  103.344      1 -total
-  4.31%    4.452      6 Template:RadioButton
-  4.04%    4.170      1 Template:Code
-  4.01%    4.142      9 Template:CheckBox
-  3.78%    3.903      1 Template:Macro/it
-  3.72%    3.840      1 Template:Codeextralink
-  3.61%    3.727      9 Template:SpinBox
-  2.07%    2.142      3 Template:Button
-  2.06%    2.127      1 Template:TRUE
-  1.36%    1.409      1 Template:FALSE
+100.00%  152.367      1 -total
+  2.70%    4.114      9 Template:CheckBox
+  2.30%    3.509      1 Template:Code
+  2.22%    3.382      9 Template:SpinBox
+  2.11%    3.213      6 Template:RadioButton
+  2.05%    3.119      1 Template:Macro/it
+  1.53%    2.329      1 Template:Codeextralink
+  1.39%    2.115      1 Template:TRUE
+  1.08%    1.649      1 Template:Caption
+  1.01%    1.544      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122105815 and revision id 1742284. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122105849 and revision id 1742286. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
