Updated page Cables CableConnector/fr

--- a/wiki/fr/Cables_CableConnector.html
+++ b/wiki/fr/Cables_CableConnector.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Cables CableConnector/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Cables+CableConnector&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Cables_CableConnector.html" class="mw-pt-progress mw-pt-progress--high" title="Cables Leitungsverbindung (99% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Cables_CableConnector.html" class="mw-pt-progress mw-pt-progress--complete" title="Cables Leitungsverbindung (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Cables_CableConnector.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Cables CableConnector (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../pl/Cables_CableConnector.html" class="mw-pt-progress mw-pt-progress--low" title="Kable: Z&#322;&#261;cze kablowe (1% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Cables_CableBox.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/Cables_CableBox.html" title="Cables CableBox/fr">Bo&icirc;te</a></div>
@@ -186,15 +186,14 @@
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Base</b><span style="font-size:80%;"> (<code>Link</code>)</span>&nbsp;: une forme externe de tout objet de base bas&eacute; sur <a href="../fr/Part_Workbench.html" title="Part Workbench/fr">Shape</a> peut &ecirc;tre utilis&eacute;e ici. Cela remplacera la m&eacute;thode par d&eacute;faut de cr&eacute;ation de forme et une forme externe sera utilis&eacute;e. Les param&egrave;tres <b>Number Of Terminals</b> et <b>Number Of Supp Lines</b> deviennent visibles et peuvent &ecirc;tre modifi&eacute;s si la propri&eacute;t&eacute; Base n'est pas None.</li></ul>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Cable Connector</span>
 </p>
-<div class="mw-translate-fuzzy">
-<ul><li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Height</b><span style="font-size:80%;"> (<code>Length</code>)</span>&nbsp;: sp&eacute;cifie la hauteur du connecteur. La hauteur par d&eacute;faut est de 5 mm.</li>
+<ul><li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Claim Children</b><span style="font-size:80%;"> (<code>Bool</code>)</span>&nbsp;: si cette option est d&eacute;finie sur <code>true</code>, les connecteurs et les lignes suppl&eacute;mentaires li&eacute;s seront consid&eacute;r&eacute;s comme des enfants dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a> (<span style="color:blue;">introduite dans la version 0.3.3</span>).</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Height</b><span style="font-size:80%;"> (<code>Length</code>)</span>&nbsp;: sp&eacute;cifie la hauteur du connecteur. La hauteur par d&eacute;faut est de 5 mm.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Height</b><span style="font-size:80%;"> (<code>Length</code>)</span>&nbsp;: sp&eacute;cifie la taille des trous en mm<sup>2</sup>. La taille des trous par d&eacute;faut est de 2 mm<sup>2</sup>.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Number of Holes</b><span style="font-size:80%;"> (<code>Integer</code>)</span>&nbsp;: sp&eacute;cifie le nombre de trous. La valeur par d&eacute;faut est 3.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Number Of Supp Lines</b><span style="font-size:80%;"> (<code>Integer</code>)</span>&nbsp;: (masqu&eacute; par d&eacute;faut) sp&eacute;cifie le nombre d'objets enfants de <a href="../fr/Cables_SuppLines.html" title="Cables SuppLines/fr">SuppLines</a>. La valeur par d&eacute;faut est 0.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Number Of Terminals</b><span style="font-size:80%;"> (<code>Integer</code>)</span>&nbsp;: (masqu&eacute; par d&eacute;faut) sp&eacute;cifie le nombre d'objets enfants <a href="../fr/Cables_CableTerminal.html" title="Cables CableTerminal/fr">CableTerminal</a>. La valeur par d&eacute;faut est 1.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Number Of Terminals</b><span style="font-size:80%;"> (<code>Integer</code>)</span>&nbsp;: (masqu&eacute; par d&eacute;faut) sp&eacute;cifie le nombre d'objets enfants de <a href="../fr/Cables_CableTerminal.html" title="Cables CableTerminal/fr">Terminaison de c&acirc;ble</a>. La valeur par d&eacute;faut est 1.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Preset</b><span style="font-size:80%;"> (<code>Enumeration</code>)</span>&nbsp;: sp&eacute;cifie l'ensemble pr&eacute;d&eacute;fini de param&egrave;tres pour le connecteur de c&acirc;ble. Le pr&eacute;r&eacute;glage par d&eacute;faut est <code>TerminalStrip_2.5mm2_x3</code>.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Thickness</b><span style="font-size:80%;"> (<code>Length</code>)</span>&nbsp;: Sp&eacute;cifie l'&eacute;paisseur de la paroi entre le trou et la surface externe du connecteur. L'&eacute;paisseur par d&eacute;faut est de 1 mm.</li></ul>
-</div>
+<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Thickness</b><span style="font-size:80%;"> (<code>Length</code>)</span>&nbsp;: sp&eacute;cifie l'&eacute;paisseur de la paroi entre le trou et la surface externe du connecteur. L'&eacute;paisseur par d&eacute;faut est de 1 mm.</li></ul>
 <p><span id="Tutorials"></span>
 </p>
 <h2><span class="mw-headline" id="Tutoriels">Tutoriels</span></h2>
@@ -226,35 +225,35 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260118194808
+Cached time: 20260122111219
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.094 seconds
-Real time usage: 0.167 seconds
-Preprocessor visited node count: 981/1000000
-Post&#8208;expand include size: 16619/2097152 bytes
-Template argument size: 4765/2097152 bytes
+CPU time usage: 0.093 seconds
+Real time usage: 0.186 seconds
+Preprocessor visited node count: 1028/1000000
+Post&#8208;expand include size: 17067/2097152 bytes
+Template argument size: 4825/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 7/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2296/5000000 bytes
+Unstrip post&#8208;expand size: 2305/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   75.232      1 -total
- 25.03%   18.834      2 Template:Docnav/fr
- 12.44%    9.362      9 Template:PropertyData
- 12.30%    9.256      1 Template:GuiCommand/fr
-  8.73%    6.570      2 Template:TitleProperty
-  8.43%    6.340      9 Template:Variable
-  7.47%    5.621      6 Template:Code
-  6.03%    4.539      1 Template:Button
-  5.92%    4.453      5 Template:Value
-  5.82%    4.382      6 Template:KEY
+100.00%   98.407      1 -total
+ 23.77%   23.394     10 Template:PropertyData
+ 17.64%   17.359     12 Template:FileName
+ 13.79%   13.573      1 Template:GuiCommand/fr
+ 12.08%   11.883     10 Template:Variable
+  8.35%    8.217      3 Template:Caption
+  6.61%    6.505      2 Template:TitleProperty
+  5.96%    5.861      6 Template:KEY
+  5.31%    5.224      2 Template:Docnav/fr
+  5.13%    5.046      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:374497-0!canonical and timestamp 20260118194808 and revision id 1740816. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:374497-0!canonical and timestamp 20260122111219 and revision id 1742290. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
