Updated page Cables CableConnector/fr

--- a/wiki/fr/Cables_CableConnector.html
+++ b/wiki/fr/Cables_CableConnector.html
@@ -186,7 +186,7 @@
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Base</b><span style="font-size:80%;"> (<code>Link</code>)</span>&nbsp;: une forme externe de tout objet de base bas&eacute; sur <a href="../fr/Part_Workbench.html" title="Part Workbench/fr">Shape</a> peut &ecirc;tre utilis&eacute;e ici. Cela remplacera la m&eacute;thode par d&eacute;faut de cr&eacute;ation de forme et une forme externe sera utilis&eacute;e. Les param&egrave;tres <b>Number Of Terminals</b> et <b>Number Of Supp Lines</b> deviennent visibles et peuvent &ecirc;tre modifi&eacute;s si la propri&eacute;t&eacute; Base n'est pas None.</li></ul>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Cable Connector</span>
 </p>
-<ul><li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Claim Children</b><span style="font-size:80%;"> (<code>Bool</code>)</span>&nbsp;: si cette option est d&eacute;finie sur <code>true</code>, les connecteurs et les lignes suppl&eacute;mentaires li&eacute;s seront consid&eacute;r&eacute;s comme des enfants dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a> (<span style="color:blue;">introduite dans la version 0.3.3</span>).</li>
+<ul><li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Claim Children</b><span style="font-size:80%;"> (<code>Bool</code>)</span>&nbsp;: si cette option est d&eacute;finie sur <code>true</code>, les terminaisons et les lignes suppl&eacute;mentaires li&eacute;es seront consid&eacute;r&eacute;es comme des enfants dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a> (<span style="color:blue;">introduite dans la version 0.3.3</span>).</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Height</b><span style="font-size:80%;"> (<code>Length</code>)</span>&nbsp;: sp&eacute;cifie la hauteur du connecteur. La hauteur par d&eacute;faut est de 5 mm.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Height</b><span style="font-size:80%;"> (<code>Length</code>)</span>&nbsp;: sp&eacute;cifie la taille des trous en mm<sup>2</sup>. La taille des trous par d&eacute;faut est de 2 mm<sup>2</sup>.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Number of Holes</b><span style="font-size:80%;"> (<code>Integer</code>)</span>&nbsp;: sp&eacute;cifie le nombre de trous. La valeur par d&eacute;faut est 3.</li>
@@ -225,12 +225,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260122111219
+Cached time: 20260122111423
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.093 seconds
-Real time usage: 0.186 seconds
+CPU time usage: 0.106 seconds
+Real time usage: 0.169 seconds
 Preprocessor visited node count: 1028/1000000
 Post&#8208;expand include size: 17067/2097152 bytes
 Template argument size: 4825/2097152 bytes
@@ -241,19 +241,19 @@ Unstrip post&#8208;expand size: 2305/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   98.407      1 -total
- 23.77%   23.394     10 Template:PropertyData
- 17.64%   17.359     12 Template:FileName
- 13.79%   13.573      1 Template:GuiCommand/fr
- 12.08%   11.883     10 Template:Variable
-  8.35%    8.217      3 Template:Caption
-  6.61%    6.505      2 Template:TitleProperty
-  5.96%    5.861      6 Template:KEY
-  5.31%    5.224      2 Template:Docnav/fr
-  5.13%    5.046      1 Template:Button
+100.00%   57.925      1 -total
+ 16.39%    9.493     10 Template:PropertyData
+ 14.87%    8.616      2 Template:TitleProperty
+ 10.96%    6.349     10 Template:Variable
+  9.75%    5.648      1 Template:GuiCommand/fr
+  9.55%    5.530      6 Template:Code
+  7.62%    4.412      2 Template:Docnav/fr
+  7.15%    4.139     20 Template:Incode
+  7.14%    4.136      3 Template:Caption
+  5.17%    2.997     12 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:374497-0!canonical and timestamp 20260122111219 and revision id 1742290. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:374497-0!canonical and timestamp 20260122111423 and revision id 1742295. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
